--- a/view-all-student.html
+++ b/view-all-student.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-fluid col-8">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">User : Username</a>
               <a class="navbar-brand" href="#">|</a>
@@ -33,7 +33,7 @@
           </nav>
           <h1 class="text-center pt-5">View All Students</h1>
           <div class="col-6 mx-auto">
-            <table id="tblItems" class="table table-bordered table-hover">
+            <table id="tblItems" class="table table-info table-bordered table-hover mt-5">
                 <thead>
                     <tr>
                         <th>Id</th>
