--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-fluid col-8">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">User : Username</a>
               <a class="navbar-brand" href="#">|</a>
