--- a/sign-in.html
+++ b/sign-in.html
@@ -21,7 +21,7 @@
               <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
                 <button id="btn-logIn" type="button" class="btn btn-primary btn-block col-12 mb-3 mt-3">Log In</button>
-                <button id="btn-signIn" type="button" class="btn btn-primary btn-block col-12">Sign Up</button>
+                <a id="btn-signIn" href="./sign-up.html" type="button" class="btn btn-primary btn-block col-12">Sign Up</a>
           </form>
     </div>
 
