--- a/dashboard.html
+++ b/dashboard.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <title>Dashboard</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <title>Dashboard | SMS</title>
 </head>
 <body>
     <div class="container-fluid col-8">
@@ -34,7 +34,5 @@
           <h1 class="text-center pt-5">Dashboard</h1>
           <h3 class="text-center pt-5">Hello My I am ....</h3>
     </div>
-
-      <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
