--- a/add-student.html
+++ b/add-student.html
@@ -45,5 +45,6 @@
                 <button id="" type="button" class="btn btn-primary btn-block col-12 mb-3 mt-3">Save</button>
           </form>
     </div>
+    <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
