--- a/dashboard.html
+++ b/dashboard.html
@@ -28,6 +28,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="./view-all-student.html">View All Students</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Sign out</a>
+                  </li>                  
                 </ul>
               </div>
             </div>
@@ -35,5 +38,6 @@
           <h1 class="text-center pt-5">Dashboard</h1>
           <h3 class="text-center pt-5">Hello My I am ....</h3>
     </div>
+    <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
