--- a/sign-in.html
+++ b/sign-in.html
@@ -25,6 +25,6 @@
                 <a id="btn-signIn" href="./sign-up.html" type="button" class="btn btn-primary btn-block col-12">Sign Up</a>
           </form>
     </div>
-
+    <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
