--- a/sign-up.html
+++ b/sign-up.html
@@ -32,6 +32,6 @@
                 <button id="" type="button" class="btn btn-primary btn-block col-12">Sign Up</button>
           </form>
     </div>
-
+    <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
