--- a/view-all-student.html
+++ b/view-all-student.html
@@ -69,5 +69,6 @@
             </table>
           </div>
     </div>
+    <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
