--- a/add-student.html
+++ b/add-student.html
@@ -28,6 +28,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="./view-all-student.html">View All Students</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Sign out</a>
+                  </li>                    
                 </ul>
               </div>
             </div>
