--- a/view-all-student.html
+++ b/view-all-student.html
@@ -28,6 +28,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" href="#">View All Students</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Sign out</a>
+                  </li>                    
                 </ul>
               </div>
             </div>
@@ -51,21 +54,6 @@
                         <td><i class="fas fa-trash"></i></td>
                     </tr>
                 </tbody>
-                <tfoot>
-                    <tr>
-                        <th colspan="4">
-                            <nav aria-label="Page navigation example">
-                                <ul class="pagination">
-                                  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                                  <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                  <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                                </ul>
-                              </nav>
-                        </th>
-                    </tr>
-                </tfoot>
             </table>
           </div>
     </div>
