Connect with TS Files

--- a/add-student.html
+++ b/add-student.html
@@ -9,7 +9,7 @@
     <title>Add Student | SMS</title>
 </head>
 <body>
-    <div class="container-fluid col-8">
+    <div class="container-fluid col-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">User : Username</a>
@@ -36,7 +36,7 @@
             </div>
           </nav>
           <h1 class="text-center pt-5">Add Student</h1>
-          <form class="col-3 mx-auto mt-5">
+          <form class="col-10 mx-auto mt-5">
             <div class="mb-3">
               <label class="form-label">Name</label>
               <input type="text" class="form-control" id="txtUserName">
@@ -49,5 +49,6 @@
           </form>
     </div>
     <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="module" src="ts/add-student.ts"></script>
 </body>
 </html>
