--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
     <title>Dashboard | SMS</title>
 </head>
 <body>
-    <div class="container-fluid col-8">
+    <div class="container-fluid col-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">User : Username</a>
@@ -39,5 +39,6 @@
           <h3 class="text-center pt-5">Hello My I am ....</h3>
     </div>
     <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="module" src="ts/dashboard.ts"></script>
 </body>
 </html>
