--- a/sign-up.html
+++ b/sign-up.html
@@ -12,7 +12,7 @@
     
     <div class="container-fluid">
         <h1 class="text-center pt-5">Sign Up</h1>
-        <form class="col-3 mx-auto mt-t">
+        <form class="col-10 mx-auto mt-t">
             <div class="mb-3">
               <label class="form-label">Full Name</label>
               <input type="text" class="form-control" id="txtUserName">
@@ -33,5 +33,6 @@
           </form>
     </div>
     <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="module" src="ts/sign-up.ts"></script>
 </body>
 </html>
