--- a/dashboard.html
+++ b/dashboard.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Dashboard | SMS</title>
+    <script type="module" src="ts/auth-guard.ts"></script>
 </head>
 <body>
+  <div class="overlay"></div>
     <div class="container-fluid col-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
