--- a/view-all-student.html
+++ b/view-all-student.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>View All Students | SMS</title>
+    <script type="module" src="ts/auth-guard.ts"></script>
 </head>
 <body>
+  <div class="overlay"></div>
     <div class="container-fluid col-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
@@ -58,6 +60,6 @@
           </div>
     </div>
     <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="module" src="ts/view-all-student.ts"></script>
+    <!-- <script type="module" src="ts/view-all-student.ts"></script> -->
 </body>
 </html>
