--- a/view-all-student.html
+++ b/view-all-student.html
@@ -59,6 +59,6 @@
           </div>
     </div>
     <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- <script type="module" src="ts/view-all-student.ts"></script> -->
+    <script type="module" src="ts/view-all-student.ts"></script>
 </body>
 </html>
