--- a/dashboard.html
+++ b/dashboard.html
@@ -29,8 +29,8 @@
                   <li class="nav-item">
                     <a class="nav-link" href="./view-all-student.html">View All Students</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Sign out</a>
+                  <li id="btn-logout" class="nav-item">
+                    <a class="nav-link" href="#!">Sign out</a>
                   </li>                  
                 </ul>
               </div>
