Add signout and username to UIS

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
     <div class="container-fluid col-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">User : Username</a>
+              <a class="navbar-brand" href="#">User : <span id="username"></span></a>
               <a class="navbar-brand" href="#">|</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
             </div>
           </nav>
           <h1 class="text-center pt-5">Dashboard</h1>
-          <h3 class="text-center pt-5">Hello My I am ....</h3>
+          <h3 class="text-center pt-5">Hello I am <span id="full-name"></span></h3>
     </div>
     <script type="module" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="module" src="ts/dashboard.ts"></script>
